GNOME Bugzilla – Bug 776234
image-viewer: fix assertion trying to free a NULL array
Last modified: 2016-12-18 21:05:40 UTC
The array might be null when finalizing
Created attachment 342158 [details] [review] image-viewer: fix assertion trying to free a NULL array
Attachment 342158 [details] pushed as d6e1366 - image-viewer: fix assertion trying to free a NULL array