image-viewer: fix assertion trying to free a NULL array

https://bugzilla.gnome.org/show_bug.cgi?id=776234